--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -147,7 +147,7 @@ p {
   padding: 0.375rem 0.75rem;
   letter-spacing: var(--spacing);
   font-weight: 700;
-  transition: --r=var(--transition);
+  transition: var(--transition);
   font-size: 0.875rem;
   border: 2px solid transparent;
   cursor: pointer;
@@ -169,6 +169,50 @@ Navbar
 Hero
 ===============
 */
+
+.hero {
+  display: flex;
+  min-height: 100vh;
+  background-color: var(--color-primary-color-5);
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-banner {
+  text-align: center;
+  color: var(--color-white);
+  padding: 0 3rem;
+}
+
+.hero-banner h1 {
+  text-transform: uppercase;
+}
+
+.hero-banner p {
+  color: var(--color-white);
+  letter-spacing: var(--spacing);
+  max-width: 35rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hero-btn {
+  padding: 1rem 2rem;
+  background-color: var(--color-white);
+  color: var(--color-primary-color-5);
+  font-size: 1.25rem;
+}
+
+.hero-btn:hover {
+  border: 2px solid var(--color-white);
+  background: var(--color-primary-color-5);
+  color: var(--color-white);
+}
+
+@media screen (min-width: 800px) {
+  background: linear-gradient(to right, rgba(, 0.7), rgba(, 0.7));
+}
+
 /*
 =============== 
 About
