--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -46,7 +46,7 @@ Global styles
 ======================
 */
 
-* {
+*, ::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -159,6 +159,35 @@ p {
   background-color: var(--color-primary-8);
 }
 
+.section{
+  padding: 5rem 0;
+}
+
+.section-title{
+  text-align: center;
+  margin-bottom: 4rem;
+}
+
+.section-title h2{
+  text-transform: uppercase;
+}
+
+.section-title span{
+  color: var(--color-primary-color-5);
+}
+
+.section-center{
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+}
+
+@media sceen and (min-width: 992px){
+  .section-center{
+    width: 95vw;
+  }
+}
+
 /*
 =============== 
 Navbar
@@ -209,7 +238,7 @@ Hero
   color: var(--color-white);
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 992px) {
   .hero{
     background: linear-gradient( rgba(44, 174, 186, 0.6), rgba(0, 0, 0, 0.7)), url(../images/main.jpeg) center/cover no-repeat;
     padding: 0.5rem 2rem;
@@ -227,9 +256,52 @@ About
 ===============
 */
 
-/* section add to globals */
-/* title add to globals */
-/* section center add to globals */
+
+.about-img{
+  margin-bottom: 2rem;
+}
+
+.about-info{
+  margin-bottom: 2rem;
+}
+
+@media screen and (min-width: 992px){
+  .about-center{
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .about-col{
+    /* This is a shorthand for:
+    flex-grow
+    flex-shring
+    flex-basis */
+
+    flex: 0 0 calc(50% - 2rem);
+    margin-bottom: 0;
+
+    /* aligns this specific item to the center */
+    align-self: center;
+  }
+
+  @media screen and (min-width: 1170px){
+    .about-img {
+      position: relative;
+    }
+
+    .about-img::before{
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border: 0.5rem solid var(--color-primary-color-5);
+      top: -1.5rem;
+      left: -1.5rem;
+      z-index: -1;
+
+    }
+  }
+}
 
 /*
 =============== 
