Tony-mackbook services section update

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -312,6 +312,66 @@ Services
   background-color: var(--color-grey-10);
 }
 
+.service{
+  text-align: center;
+  margin-bottom: 3rem;
+  
+}
+
+.service-icon{
+  display: inline-block;
+  background-color: var(--color-primary-color-5);
+  color: var(--color-primary-1);
+  padding: 0.5rem;
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+
+.service-text{
+  max-width: 20rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 576px){
+  .services-center{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .service{
+    flex: 0 0 calc(50% - 1rem);
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 992px){
+  .service{
+    flex: 0 0 calc(33.3% - 1rem);
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1170px){
+  .service{
+    display: flex;
+    text-align: left;
+  }
+
+  .service-icon{
+    align-self: start;
+  }
+
+  .service-icon{
+    margin-right: 1rem;
+  }
+
+  .service-title{
+    margin-bottom: 0.5rem;
+  }
+}
+
 
 /*
 =============== 
