--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -69,15 +69,10 @@ a {
   text-decoration: none;
 }
 
-img {
+img:not(.nav-logo) {
   width: 100%;
   display: block;
 }
-
-/* img:not(.nav-logo) {
-  width: 100%;
-  display: block;
-} */
 
 h1,
 h2,
@@ -194,6 +189,77 @@ p {
 Navbar
 ===============
 */
+.navBar{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--color-white);
+  box-shadow: var(--dark-shadow);
+  z-index: 100;
+}
+
+.nav-icon{
+  display: none;
+}
+
+.nav-center{
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
+}
+
+.nav-header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+}
+
+.nav-toggle{
+  background: transparent;
+  border: transparent;
+  font-size: 1.5rem;
+  color: var(--color-primary-color-5);
+  cursor: pointer;
+  transition: var(--transition);
+}
+
+.nav-toggle:hover{
+  transform: scale(1.2);
+}
+
+.nav-links{
+  max-width: 1170px;
+  margin: 0 auto;
+}
+
+.nav-link{
+  display: block;
+  padding: 1rem 2rem;
+  text-transform: capitalize;
+  letter-spacing: var(--spacing);
+  transition: var(--transition);
+  color: var(--color-grey-1);
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.nav-link:hover{
+  background-color: var(--color-primary-6);
+  color: var(--color-white);
+  padding-left: 1.5rem;
+}
+
+.nav-links{
+  height: 0;
+  overflow: hidden;
+  transition: var(--transition);
+}
+
+.show-links{
+  height: 280px;
+}
 /*
 =============== 
 Hero
@@ -472,15 +538,153 @@ Featured Tours
 Contact
 ===============
 */
+#contact{
+  background-color: var(--color-primary-6);
+}
 
+.contact-info{
+  color: var(--color-white);
+  width: 85%;
+}
+
+.cta-info{
+  color: var(--color-primary-8);
+}
+
+.form{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.form-control{
+  width: 70%;
+  border: none;
+  outline: none;
+  margin-right: 1.5rem;
+  letter-spacing: var(--spacing);
+  padding-left: 1rem;
+  font-size: 1rem;
+  
+}
+
+.form-control::placeholder{
+  letter-spacing: var(--spacing);
+  text-transform: capitalize;
+  font-size: 1rem;
+  line-height: 1.5;
+  
+}
+
+.contact-btn{
+  background-color: var(--color-primary-8);
+}
+
+@media screen and (min-width: 992px){
+  .contact-center{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .contact-info, .contact-form{
+    flex: 0 0 calc(50% - 1rem);
+    margin-bottom: 0;
+  }
+
+  .contact-form{
+    align-self: center;
+  }
+}
 /*
 =============== 
 Gallery
 ===============
 */
+.gallery-photos{
+  position: relative;
+  background-color: var(--color-primary-color-5);
+}
 
+.gallery-icon{
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 2rem;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  cursor: pointer;
+  color: var(--color-white);
+  transition: var(--transition);
+}
+
+.gallery-image{
+  height: 20rem;
+  object-fit: cover;
+  transition: var(--transition)
+}
+
+.gallery-photos:hover .gallery-image{
+  opacity: 0.5;
+}
+
+.gallery-photos:hover .gallery-icon{
+  opacity: 1;
+}
+
+@media screen and (min-width: 992px){
+  .gallery-center{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .gallery-photos{
+    flex: 0 0 calc(50%);
+  }
+}
+
+@media screen and (min-width: 1170px){
+  .gallery-photos{
+    flex: 0 0 calc(25%);
+  }
+}
 /*
 =============== 
 Footer
 ===============
 */
+
+#footer{
+  background-color: var(--color-grey-1);
+  text-align: center;
+  padding: 2rem 2rem;
+}
+
+.footer-nav, .footer-icon-container{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2rem;
+  flex-wrap: wrap;
+}
+
+.footer-nav-item, .footer-icon{
+  color: var(--color-white);
+  padding-right: 1rem;
+  cursor: pointer;
+  letter-spacing: var(--spacing);
+  transition: var(--transition);
+}
+
+.footer-nav-item:hover, .footer-icon:hover{
+  color: var(--color-primary-color-5 );
+}
+
+.footer-icon{
+  font-size: 2rem;
+}
+
+.footer-disclaimer{
+  color: var(--color-white);
+  letter-spacing: var(--spacing);
+}
